build(ECE5831): modify .gitignore to add NN weight files

--- a/.gitignore
+++ b/.gitignore
@@ -144,6 +144,7 @@ dmypy.json
 *.TIFF
 *.HEIC
 *.mp4
+*.mkv
 *.mov
 *.MOV
 *.avi
@@ -182,7 +183,7 @@ VOC/
 
 # Neural Network weights -----------------------------------------------------------------------------------------------
 *.weights
-*.pt
+# *.pt
 *.pb
 *.onnx
 *.engine
